<resources>
    <string name="app_name">i96mg</string>
    <string name="app_name_icon">i96mg</string>
    <string name="action_close">close</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="there_is_no_internet_connection">there is no internet connection</string>
    <string name="credit_debit_card">Credit / Debit Card</string>
    <string name="pay_pal">Pay pal</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="security_code_cvv">Security Code (CVV)</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="pay_with_paypal_n_nwhen_you_hit_place_order_you_will_be_redirected_to_paypal_where_you_can_complete_your_purchase_securely">Pay with PayPal \n When you hit Place Order you will be redirected to PayPal where you can complete your purchase securely.</string>
    <string name="place_order">Place Order</string>
    <string name="email">Email</string>
    <string name="for_order_confirmation">*for order confirmation</string>
    <string name="full_name">Full Name</string>
    <string name="full_address">Full Address</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="zip_postal_code">Zip/Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="shop_sells_exclusive_skins_for_the_game_fortnite">Shop sells exclusive skins for the game Fortnite</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity">Quantity:</string>
    <string name="total">Total :</string>
    <string name="total_only">Total</string>
    <string name="name_nprice">Name\nprice</string>
    <string name="enter_email">please enter your email !!</string>
    <string name="enter_valid_email">please enter a valid email !!</string>
    <string name="enter_full_name">please enter your full name !!</string>
    <string name="enter_full_address">please enter your full address !!</string>
    <string name="enter_country">please enter your country !!</string>
    <string name="enter_region">please enter your region !!</string>
    <string name="enter_zip_code">please enter your zip_code !!</string>
    <string name="enter_phone_number">please enter your phone number !!</string>
    <string name="enter_valid_phone_number">please enter valid phone number !!</string>
    <string name="english">ع</string>
    <string name="voucher">Promo code : -</string>
    <string name="please_enter_card_number">please enter card number !!</string>
    <string name="please_enter_code_number">please enter code number !!</string>
    <string name="please_enter_expiration_date">please enter expiration date !!</string>
    <string name="please_enter_security_code">please enter security code !!</string>
    <string name="please_enter_card_holder">please enter card holder name !!</string>
    <string name="voucher_text">Promo code</string>
    <string name="xx_xx">xx/xx</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="enter_your_code">Enter your promo code</string>
    <string name="please_enter_valid_card_number">please enter valid card number !!</string>
    <string name="please_add_products">please add products you want to the card !!</string>
    <string name="sr">SAR</string>
    <string name="product_is_not_available">Sorry the product is not available now</string>
    <string name="off_percent">Off</string>
    <string name="deleted_successfully">has been deleted successfully.</string>
    <string name="undo_">Undo</string>
    <string name="banck_account">bank account</string>
    <string name="there_is_no_items_added_to_the_card_yet">There is no items added to the card yet</string>
    <string name="sale">Sale</string>
    <string name="wish_list">Wish list</string>
    <string name="pending_payment_orders">Pending payment orders</string>
    <string name="arabic">العربية</string>
    <string name="orders_list">Order list</string>
    <string name="logout">logout</string>
    <string name="have_not_initialized">have not been installed.</string>
    <string name="login">Login</string>
    <string name="resend">Resend</string>
    <string name="send_code">Send Code</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="save">Save</string>
    <string name="bank_account">Bank account</string>
    <string name="mada">Mada</string>
    <string name="choose_account">Choose account</string>
    <string name="attach_your_payment_receipt">Attach your payment receipt</string>
    <string name="is_there_any_questions">هل يوجد لديك سؤال؟</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign up</string>
    <string name="to_continue_to_the_cart_you_have_to_login_firts">To continue to the cart you have to login firt !</string>
    <string name="not_now">Not Now</string>
    <string name="epic_or_sony">إيبك أو سونى؟</string>
    <string name="password">الرقم السرى</string>
    <string name="whatsapp_number">رقم الواتس اب الخاص بك</string>
    <string name="registration_code">Registration code</string>
    <string name="please_login">please login first !</string>
    <string name="remove_from_cart">Remove from Cart</string>
    <string name="swipe_to_remove_items">Swipe to remove item</string>
    <string name="product_added_successfully">product has been added to the cart successfully.</string>
    <string name="product_removed_successfully">Product has been removed from the cart successfully.</string>
    <string name="item_added_before">This item has already been added !!</string>
    <string name="order_number">Order number :</string>
    <string name="time_to_cancel_order">Time to cancel order (</string>
    <string name="bracket_close">)</string>
    <string name="edit">edit</string>
    <string name="please_enter_full_name">Please enter full name !</string>
    <string name="nothing_changed">nothing changed !</string>
    <string name="you_havenot_picked_image">You haven\'t picked Image !</string>
    <string name="something_went_wrong">Something went wrong !</string>
    <string name="please_attach_your_receipt">please attach your payment receipt</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit !</string>
    <string name="rate_us">Rate us</string>
    <string name="enter_first_name">please enter first name !</string>
    <string name="enter_second_name">please enter second name !</string>
    <string name="select_bank_account">please select Bank Account !!</string>
    <string name="make_rate_please">Please give rate before send review !!</string>
    <string name="order_added">Order has been added to pending payment orders</string>
    <string name="account_number">Account Number</string>
    <string name="app_maker_name">App Developer</string>
    <string name="view_linkein_profile">View linkedin profile</string>
</resources>
