<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_bg"
        tools:context=".view.ui.activity.InformationActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/product_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar_color_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name_icon"
                android:textColor="@android:color/white"
                android:textSize="17.7sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp29h"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="@+id/main_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/main_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp39h"
            android:paddingStart="@dimen/dp12h"
            android:paddingEnd="@dimen/dp12h"
            android:background="@drawable/edittext_border_yellow"
            android:layout_marginStart="@dimen/dp28h"
            android:layout_marginTop="@dimen/dp33w"
            android:layout_marginEnd="@dimen/dp28h"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_toolbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_order_confirmation"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/et_full_name"
            app:layout_constraintEnd_toEndOf="@+id/et_full_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_full_name" />

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp39h"
            android:layout_marginStart="@dimen/dp28h"
            android:layout_marginTop="@dimen/dp33w"
            android:layout_marginEnd="@dimen/dp28h"
            android:singleLine="true"
            android:paddingStart="@dimen/dp12h"
            android:paddingEnd="@dimen/dp12h"
            android:background="@drawable/edittext_border_yellow"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_address"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/et_full_address"
            app:layout_constraintEnd_toEndOf="@+id/et_full_address"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_full_address" />

        <EditText
            android:id="@+id/et_full_address"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp39h"
            android:layout_marginStart="@dimen/dp28h"
            android:layout_marginTop="@dimen/dp33w"
            android:layout_marginEnd="@dimen/dp28h"
            android:singleLine="true"
            android:paddingStart="@dimen/dp12h"
            android:paddingEnd="@dimen/dp12h"
            android:background="@drawable/edittext_border_yellow"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_full_name" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/et_country"
            app:layout_constraintEnd_toEndOf="@+id/et_country"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_country" />

        <EditText
            android:id="@+id/et_country"
            android:layout_width="@dimen/dp128w"
            android:layout_height="@dimen/dp39h"
            android:layout_marginTop="@dimen/dp33w"
            android:singleLine="true"
            android:inputType="text"
            android:paddingStart="@dimen/dp12h"
            android:paddingEnd="@dimen/dp12h"
            android:background="@drawable/edittext_border_yellow"
            android:nextFocusDown="@id/et_region"
            app:layout_constraintEnd_toEndOf="@+id/et_full_address"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_full_address"
            app:layout_constraintTop_toBottomOf="@+id/et_full_address" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/et_region"
            app:layout_constraintEnd_toEndOf="@+id/et_region"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_region" />

        <EditText
            android:id="@+id/et_region"
            android:layout_width="@dimen/dp128w"
            android:layout_height="@dimen/dp39h"
            android:layout_marginTop="@dimen/dp33w"
            android:singleLine="true"
            android:inputType="text"
            android:paddingStart="@dimen/dp12h"
            android:paddingEnd="@dimen/dp12h"
            android:background="@drawable/edittext_border_yellow"
            app:layout_constraintEnd_toEndOf="@+id/et_full_address"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_full_address"
            app:layout_constraintTop_toBottomOf="@+id/et_full_address" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip_postal_code"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/et_zip_code"
            app:layout_constraintEnd_toEndOf="@+id/et_zip_code"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_zip_code" />

        <EditText
            android:id="@+id/et_zip_code"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp39h"
            android:layout_marginStart="@dimen/dp28h"
            android:layout_marginTop="@dimen/dp33w"
            android:layout_marginEnd="@dimen/dp28h"
            android:singleLine="true"
            android:paddingStart="@dimen/dp12h"
            android:paddingEnd="@dimen/dp12h"
            android:inputType="number"
            android:background="@drawable/edittext_border_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_region" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/et_phone_num"
            app:layout_constraintEnd_toEndOf="@+id/et_phone_num"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_phone_num" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp39h"
            android:layout_marginStart="@dimen/dp28h"
            android:layout_marginTop="@dimen/dp33w"
            android:layout_marginEnd="@dimen/dp28h"
            android:singleLine="true"
            android:paddingStart="@dimen/dp12h"
            android:paddingEnd="@dimen/dp12h"
            android:inputType="phone"
            android:background="@drawable/edittext_border_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_zip_code" />

        <Button
            android:id="@+id/btn_countinue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp46w"
            android:background="@color/yellow_color"
            android:text="@string/continue_text"
            android:onClick="continueToPayActivity"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>